--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@ language: go
 go:
 - '1.11.x'
 
-install:
-- curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-
 script:
-- dep ensure -v
+- true
 
 deploy:
 - provider: script
