--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: go
 go:
 - '1.11.x'
 
+install:
+- curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+
 script:
 - true
 
